added new section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
       <h1>THIS IS A MAIN PAGE</h1>
     </main>
 
+    <section>
+      <h3>THIS IS A NEW SECTION</h3>
+
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore porro
+        repudiandae nemo quisquam culpa at? Voluptatum eligendi sint nobis rem
+        dolorum quod tenetur laboriosam sunt provident consequuntur hic
+        adipisci, dolore fuga fugit at natus libero quia atque repellat modi
+        amet.
+      </p>
+    </section>
+
     <footer>
       <ul>
         <li>Social</li>
